--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
+#
+# SPDX-License-Identifier: CC0-1.0
+
+# other
+*.kate-swp
+
 # Prerequisites
 *.d
 
