added license information
Former-commit-id: 78b75bae3fff86d6977edbd63ebad12e219aa0fa

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,5 @@
 # SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
+# SPDX-FileCopyrightText: Copyright 2010, Read the Docs, Inc & contributors
 #
 # SPDX-License-Identifier: CC0-1.0
 
