first python module compiles
Former-commit-id: 06118ad174c11cb546cabbd3689e06d38989fb9e

--- a/src/tools/meson.build
+++ b/src/tools/meson.build
@@ -29,8 +29,20 @@ themachinethatgoesping_tools = library(libname,sources,
                       install : true)
                       
 
+# -- internal dependency --
+tools_dep = declare_dependency(
+  dependencies : [
+    boost,
+    eigen3,
+    omp,
+    hinnant_date
+  ],
+  link_with : [themachinethatgoesping_tools],
+  include_directories : ['../']
+  )
+
+
 # -- installation setup --
-#tools_dep = declare_dependency(tools)
 
 # install headers
 if headers != ['']
@@ -44,3 +56,15 @@ pkg.generate(themachinethatgoesping_tools,
              description : 'Shared functions (C++) and small tool functionality (python) for themachinethatgoesping projects',
              url : 'https://github.com/themachinethatgoesping/tools')
 
+
+
+#         conf = configuration_data()
+#         conf.set('prefix', prefix)
+#         conf.set('VERSION', meson.project_version())
+#         conf.set('includedir', includedir)
+#
+#         pkg = configure_file(configuration: conf,
+#                             input: 'gsettings-desktop-schemas.pc.in',
+#                             install: true,
+#                             install_dir: join_paths(datadir, 'pkgconfig'),
+#                             output: 'gsettings-desktop-schemas.pc')
