renaming and restructuring
Former-commit-id: 6d32288964638ca57f20461d24ee98295d03348a

--- a/src/py_tools/meson.build
+++ b/src/py_tools/meson.build
@@ -15,7 +15,7 @@ py_tools = pymod.extension_module(
     module_name,
     sources: sources,
     dependencies : [
-        tools_dep,
+        tools_lib_dep,
         pybind11,
         python3],
     #link_with : [tools],
