--- a/meson.build
+++ b/meson.build
@@ -11,6 +11,8 @@ version : '0.0.1',
 default_options : ['warning_level=3', 'buildtype=release', 'cpp_std=c++20']
 )
 
+parentprojectname = 'themachinethatgoesping'
+
 
 # --- dependencies ---
 # system
