started working on python package namespaces
Former-commit-id: 19d0e824f5a0dffebb3d01569fa0e72b0f2df6f1

--- a/src/__init__.py.in
+++ b/src/__init__.py.in
@@ -4,4 +4,4 @@
 # SPDX-License-Identifier: MPL-2.0
 
 #import the module functions into the current namespace
-from .@MODULE_NAME@ import *
+from @PYTHON_PACKAGE_NAME@ import tools
