--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -16,7 +16,7 @@ on:
     #  - "**.c"
     #  - "**.h"
 
-env:
+# env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   #BUILD_TYPE: Release
   
