--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: pip install meson ninja
         
       - name: install dependecies
-        run: apt-get install -y libboost-dev
+        run: sudo apt-get install -y libboost-dev
       
       - name: configure meson
         run: meson setup builddir/
