renamed datetime module
Former-commit-id: 2b1befa4836bef1cc52f9c569e54a7f24225f0c2

--- a/src/py_tools/meson.build
+++ b/src/py_tools/meson.build
@@ -8,7 +8,7 @@ module_name = 'tools'
 # -- sources
 sources = [
     'module.cpp',
-    'm_datetime.cpp'
+    'm_timeconv.cpp'
 ]
 
 # define python module
