updated install pathes to allow pure python extension

--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,9 @@ hinnant_date = hinnant_date.get_variable('date_dep')
 # add src
 subdir('src')
  
+ # add python files
+subdir('py_ext')
+
 # add tests
 subdir('tests')
  
