--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -32,9 +32,12 @@ jobs:
     - uses: actions/setup-python@v1
       with:
         python-version: '3.x'
+        
+    - name: install prequisits
+      run: apt update && apt-get install -y sudo python3-pip
 
     - name: install meson
-      run: sudo apt-get update; sudo apt-get install -y python3-pip; install meson ninja
+      run: pip install meson ninja
 
     - name: install dependecies
       run: sudo apt-get update; sudo apt-get install -y libboost-dev libcurl4-openssl-dev
