--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -37,11 +37,7 @@ jobs:
       run: apt update && apt-get install -y sudo 
 
     - name: install dependecies
-      run: >
-        sudo apt-get install -y build-essential ccache 
-                                pkg-config cmake
-                                python3-pip 
-                                libboost-all-dev libcurl4-openssl-dev
+      run: sudo apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
 
     - name: install meson
       run: pip install meson ninja
