--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -33,10 +33,10 @@ jobs:
     #    python-version: '3.x'
         
     - name: update apt and install sudo
-      run: export DEBIAN_FRONTEND=noninteractive; apt update && apt-get install -y sudo 
+      run: pacman -Syu --noconfirm; pacman -Syy --noconfirm sudo 
 
     - name: install dependecies
-      run: sudo apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+      run: pacman -Syy --noconfirm build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
 
     - name: install meson
       run: pip install meson ninja
