--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -30,10 +30,10 @@ jobs:
     - uses: actions/checkout@v1
         
     - name: update apt and install sudo
-      run: export DEBIAN_FRONTEND=noninteractive; apt update && apt-get install -y sudo 
+      run: apt update && apt-get install -y sudo 
 
     - name: install dependecies
-      run: export DEBIAN_FRONTEND=noninteractive; sudo apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
 
     - name: install meson
       run: pip install meson ninja
@@ -60,13 +60,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-        
+       
     - name: update apt and install sudo
-      run: export DEBIAN_FRONTEND=noninteractive; apt update && apt-get install -y sudo 
+      run: apt update && apt-get install -y sudo 
 
     - name: install dependecies
-      run: export DEBIAN_FRONTEND=noninteractive; sudo apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
-
+      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+    
     - name: install meson
       run: pip install meson ninja
       
