--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -97,7 +97,7 @@ jobs:
       run: pacman -Syu --noconfirm; pacman -Syy --noconfirm sudo 
 
     - name: install dependecies
-      run: pacman -Syy --noconfirm build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+      run: sudo pacman -Syy --noconfirm ccache pkg-config cmake pip libboost-dev libcurl4-openssl-dev
 
     - name: install meson
       run: pip install meson ninja
