--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -65,7 +65,7 @@ jobs:
       run: apt update && apt-get install -y sudo 
 
     - name: install dependecies
-      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y ccache pkg-config cmake python-pip boost curl 
     
     - name: install meson
       run: pip install meson ninja
