--- a/.github/workflows/meson_ci.yml
+++ b/.github/workflows/meson_ci.yml
@@ -65,8 +65,8 @@ jobs:
       run: apt update && apt-get install -y sudo 
 
     - name: install dependecies
-      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y ccache pkg-config cmake python-pip boost curl 
-    
+      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
+
     - name: install meson
       run: pip install meson ninja
       
@@ -86,36 +86,36 @@ jobs:
         path: builddir/meson-logs/testlog.txt  
 
 
-#   build-on-archlinux:
-#     runs-on: ubuntu-latest
-#     container: archlinux:latest #pull directly from dockerhub   
+  build-on-archlinux:
+    runs-on: ubuntu-latest
+    container: archlinux:latest #pull directly from dockerhub   
 
-#     steps:
-#     - uses: actions/checkout@v1
+    steps:
+    - uses: actions/checkout@v1
         
-#     - name: update and install sudo
-#       run: pacman -Syu --noconfirm; pacman -Syy --noconfirm sudo 
+    - name: update and install sudo
+      run: pacman -Syu --noconfirm; pacman -Syy --noconfirm sudo 
 
-#     - name: install dependecies
-#       run: sudo pacman -Syy --noconfirm ccache pkg-config cmake pip libboost-dev libcurl4-openssl-dev
+    - name: install dependecies
+      run: sudo pacman -Syy --noconfirm ccache pkg-config cmake python-pip boost curl 
 
-#     - name: install meson
-#       run: pip install meson ninja
+    - name: install meson
+      run: pip install meson ninja
       
-#     - name: configure meson
-#       run: meson setup builddir/
-#       env:
-#         CC: gcc
+    - name: configure meson
+      run: meson setup builddir/
+      env:
+        CC: gcc
 
-#     - name: build and test
-#       run: meson test -C builddir/ -v
+    - name: build and test
+      run: meson test -C builddir/ -v
         
       
-#     - uses: actions/upload-artifact@v1
-#       if: failure()
-#       with:
-#         name: archlinux_Testlog
-#         path: builddir/meson-logs/testlog.txt
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: archlinux_Testlog
+        path: builddir/meson-logs/testlog.txt
     
 
 #   build-on-windows:
