--- a/src/tools_pymodule/meson.build
+++ b/src/tools_pymodule/meson.build
@@ -16,7 +16,7 @@ py_tools = pymod.extension_module(
     module_name,
     sources: sources,
     dependencies : [
-        tools_lib_dep,
+        tools_dep,
         pybind11,
         python3],
     #link_with : [tools],
