--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,9 +50,17 @@ jobs:
       env:
         CC: gcc
 
-    - name: build and test
+    - name: compile project
+      run: meson compile -C builddir/ -v
+
+    - name: test (cpp)
       run: meson test -C builddir/ -v
-        
+
+    - name: install project
+      run: meson install -C builddir/ -v
+
+    - name: test (pytest)
+      run: pytest -v
       
     - uses: actions/upload-artifact@v1
       if: failure()
@@ -85,9 +93,17 @@ jobs:
       env:
         CC: gcc
 
-    - name: build and test
+    - name: compile project
+      run: meson compile -C builddir/ -v
+
+    - name: test (cpp)
       run: meson test -C builddir/ -v
-        
+
+    - name: install project
+      run: meson install -C builddir/ -v
+
+    - name: test (pytest)
+      run: pytest -v
       
     - uses: actions/upload-artifact@v1
       if: failure()
@@ -120,9 +136,17 @@ jobs:
       env:
         CC: gcc
 
-    - name: build and test
+    - name: compile project
+      run: meson compile -C builddir/ -v
+
+    - name: test (cpp)
       run: meson test -C builddir/ -v
-        
+
+    - name: install project
+      run: meson install -C builddir/ -v
+
+    - name: test (pytest)
+      run: pytest -v
       
     - uses: actions/upload-artifact@v1
       if: failure()
