--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: install dependecies
+    - name: install dependecies (c++)
       run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
 
-    - name: install meson
-      run: pip install meson ninja
+    - name: install dependcies (meson & pythone)
+      run: pip install meson ninja pytest
 
     - name: configure meson
       run: meson setup builddir/
@@ -82,11 +82,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: install dependecies
+    - name: install dependecies (c++)
       run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
 
-    - name: install meson
-      run: pip install meson ninja
+    - name: install dependcies (meson & pythone)
+      run: pip install meson ninja pytest
 
     - name: configure meson
       run: meson setup builddir/
@@ -125,11 +125,11 @@ jobs:
       with:
         submodules: recursive
 
-    - name: install dependecies
+    - name: install dependecies (c++)
       run: sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl
 
-    - name: install meson
-      run: pip install meson ninja
+    - name: install dependecies (meson & python)
+      run: pip install meson ninja pytest
       
     - name: configure meson
       run: meson setup builddir/
