--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ on:
   
 jobs:
 
-build-on-ubuntu-22_04:
-    runs-on: ubuntu-prebuild
+  build-on-ubuntu-preinstalled-dependcies:
+    runs-on: ubuntu-latest
     container: ghcr.io/themachinethatgoesping/ubuntu_dependencies:latest #pull docker images with preinstalled dependcies
     steps:
 
@@ -58,6 +58,7 @@ build-on-ubuntu-22_04:
       with:
         name: Ubuntu_22.04_Testlog
         path: builddir/meson-logs/testlog.txt
+
 
   build-on-ubuntu-22_04:
     runs-on: ubuntu-latest
