--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -189,23 +189,30 @@ jobs:
         path: builddir/meson-logs/testlog.txt
     
 
-#   build-on-windows:
-#     runs-on: windows-latest
-#     steps:
-#     - uses: actions/checkout@v1
-#     - uses: actions/setup-python@v1
-#       with:
-#         python-version: '3.x'
-#     - run: pip install meson ninja
-#     - run: meson setup builddir/
-#       env:
-#         CC: gcc
-#     - run: meson test -C builddir/ -v
-#     - uses: actions/upload-artifact@v1
-#       if: failure()
-#       with:
-#         name: Windows_Meson_Testlog
-#         path: builddir/meson-logs/testlog.txt
+  build-on-windows:
+    runs-on: windows-latest
+    steps:
+    
+    - uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+
+    - name: checkout main repository
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
+
+    - run: pip install meson ninja
+    - run: meson setup builddir/
+      env:
+        CC: gcc
+    - run: meson test -C builddir/ -v
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: Windows_Meson_Testlog
+        path: builddir/meson-logs/testlog.txt
 
 #   macos:
 #     runs-on: macos-latest
