--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,56 @@ on:
   #BUILD_TYPE: Release
   
 jobs:
+  linux:
+    strategy:
+      matrix:
+        include:  
+          #- { container: 'ghcr.io/themachinethatgoesping/ubuntu_dependencies:latest', dep : 'none', pip : 'none' }
+          - { container: 'ubuntu:22.04', predep : 'apt update && apt-get install -y sudo git', dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', pip : 'pip install meson ninja pytest' }
+          - { container: 'ubuntu:20.04', predep : 'apt update && apt-get install -y sudo git', dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', pip : 'pip install meson ninja pytest' }
+          - { container: 'archlinux', predep : 'pacman -Syu --noconfirm; pacman -Syy sudo git --noconfirm', dep : 'sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl', pip : 'pip install meson ninja pytest' }
+    
+    runs-on: ubuntu-latest
+    container: ${{matrix.container}}
+
+    steps:
+    - name: install prequisits
+      run: ${{matrix.predep}}
+
+    - name: checkout main repository
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+
+    - name: install dependecies (c++)
+      run: ${{matrix.dep}}
+      
+    - name: install dependcies (meson & pythone)
+      run: ${{matrix.pip}}
+
+    - name: configure meson
+      run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
+      env:
+        CC: gcc
+
+    - name: compile project
+      run: meson compile -C builddir/
+
+    - name: test (cpp)
+      run: meson test -C builddir/ -v
+
+    - name: install project
+      run: meson install -C builddir/
+
+    - name: test (pytest)
+      run: pytest -v
+      
+    - uses: actions/upload-artifact@v1
+      if: failure()
+      with:
+        name: ${{matrix.container}}_Testlog
+        path: builddir/meson-logs/testlog.txt
+
 
   build-on-ubuntu-image:
     runs-on: ubuntu-latest
@@ -189,36 +239,36 @@ jobs:
         path: builddir/meson-logs/testlog.txt
     
 
-  build-on-windows:
-    runs-on: windows-latest
-    #container: python:latest #pull directly from dockerhub   
-    steps:
+#   build-on-windows:
+#     runs-on: windows-latest
+#     #container: python:latest #pull directly from dockerhub   
+#     steps:
 
-    - uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'
+#     - uses: actions/setup-python@v3
+#       with:
+#         python-version: '3.x'
 
-    - name: checkout main repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
+#     - name: checkout main repository
+#       uses: actions/checkout@v3
+#       with:
+#         submodules: recursive
 
-    - name: install vcpk
-      run: git clone https://github.com/Microsoft/vcpkg.git
-    - run: .\vcpkg\bootstrap-vcpkg.bat
-    - run: vcpkg install boost
+#     - name: install vcpk
+#       run: git clone https://github.com/Microsoft/vcpkg.git
+#     - run: .\vcpkg\bootstrap-vcpkg.bat
+#     - run: vcpkg install boost
 
 
-    - run: pip install meson ninja
-    - run: meson setup builddir/
-      env:
-        CC: gcc
-    - run: meson test -C builddir/ -v
-    - uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: Windows_Meson_Testlog
-        path: builddir/meson-logs/testlog.txt
+#     - run: pip install meson ninja
+#     - run: meson setup builddir/
+#       env:
+#         CC: gcc
+#     - run: meson test -C builddir/ -v
+#     - uses: actions/upload-artifact@v1
+#       if: failure()
+#       with:
+#         name: Windows_Meson_Testlog
+#         path: builddir/meson-logs/testlog.txt
 
 #   macos:
 #     runs-on: macos-latest
