--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,17 +29,27 @@ jobs:
     strategy:
       matrix:
         include:  
-          #- { container: 'ghcr.io/themachinethatgoesping/ubuntu_dependencies:latest', dep : 'none', pip : 'none' }
-          - { container: 'ubuntu:22.04', predep : 'apt update && apt-get install -y sudo git', dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', pip : 'pip install meson ninja pytest' }
-          - { container: 'ubuntu:20.04', predep : 'apt update && apt-get install -y sudo git', dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', pip : 'pip install meson ninja pytest' }
-          - { container: 'archlinux', predep : 'pacman -Syu --noconfirm; pacman -Syy sudo git --noconfirm', dep : 'sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl', pip : 'pip install meson ninja pytest' }
+          - { container: 'ghcr.io/themachinethatgoesping/ubuntu_dependencies:latest'}
+          - { container: 'ubuntu:22.04', 
+              pre-dep : 'apt update && apt-get install -y sudo git', 
+              dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', 
+              pip : 'pip install meson ninja pytest' }
+          - { container: 'ubuntu:20.04', 
+              pre-dep : 'apt update && apt-get install -y sudo git', 
+              dep : 'sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev', 
+              pip : 'pip install meson ninja pytest' }
+          - { container: 'archlinux', 
+              pre-dep : 'pacman -Syu --noconfirm; pacman -Syy sudo git --noconfirm', 
+              dep : 'sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl', 
+              pip : 'pip install meson ninja pytest' }
     
     runs-on: ubuntu-latest
     container: ${{matrix.container}}
 
     steps:
     - name: install prequisits
-      run: ${{matrix.predep}}
+      if:  ${{matrix.pre-dep}}
+      run: ${{matrix.pre-dep}}
 
     - name: checkout main repository
       uses: actions/checkout@v3
@@ -47,9 +57,11 @@ jobs:
         submodules: recursive
 
     - name: install dependecies (c++)
+      if:  ${{matrix.dep}}
       run: ${{matrix.dep}}
       
     - name: install dependcies (meson & pythone)
+      if:  ${{matrix.pip}}
       run: ${{matrix.pip}}
 
     - name: configure meson
@@ -73,169 +85,6 @@ jobs:
       if: failure()
       with:
         name: ${{matrix.container}}_Testlog
-        path: builddir/meson-logs/testlog.txt
-
-
-  build-on-ubuntu-image:
-    runs-on: ubuntu-latest
-    container: ghcr.io/themachinethatgoesping/ubuntu_dependencies:latest #pull docker images with preinstalled dependcies
-    steps:
-
-    - name: checkout main repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
-
-    - name: configure meson
-      run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
-      env:
-        CC: gcc
-
-    - name: compile project
-      run: meson compile -C builddir/
-
-    - name: test (cpp)
-      run: meson test -C builddir/ -v
-
-    - name: install project
-      run: meson install -C builddir/
-
-    - name: test (pytest)
-      run: pytest -v
-
-    - uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: Ubuntu_22.04_Testlog
-        path: builddir/meson-logs/testlog.txt
-
-
-  build-on-ubuntu-22_04:
-    runs-on: ubuntu-latest
-    container: ubuntu:22.04 #pull directly from dockerhub
-
-    steps:
-    - name: install prequisits
-      run: apt update && apt-get install -y sudo git
-
-    - name: checkout main repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
-
-    - name: install dependecies (c++)
-      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
-
-    - name: install dependcies (meson & pythone)
-      run: pip install meson ninja pytest
-
-    - name: configure meson
-      run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
-      env:
-        CC: gcc
-
-    - name: compile project
-      run: meson compile -C builddir/
-
-    - name: test (cpp)
-      run: meson test -C builddir/ -v
-
-    - name: install project
-      run: meson install -C builddir/
-
-    - name: test (pytest)
-      run: pytest -v
-      
-    - uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: Ubuntu_22.04_Testlog
-        path: builddir/meson-logs/testlog.txt
-        
-
-  build-on-ubuntu-20_04:
-    runs-on: ubuntu-latest
-    container: ubuntu:20.04 #pull directly from dockerhub   
-
-    steps:
-    - name: install prequisits
-      run: apt update && apt-get install -y sudo git
-
-    - name: checkout main repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
-
-    - name: install dependecies (c++)
-      run: sudo DEBIAN_FRONTEND=noninteractive apt-get install -y build-essential ccache pkg-config cmake python3-pip libboost-all-dev libcurl4-openssl-dev
-
-    - name: install dependcies (meson & pythone)
-      run: pip install meson ninja pytest
-
-    - name: configure meson
-      run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
-      env:
-        CC: gcc
-
-    - name: compile project
-      run: meson compile -C builddir/
-
-    - name: test (cpp)
-      run: meson test -C builddir/ -v
-
-    - name: install project
-      run: meson install -C builddir/
-
-    - name: test (pytest)
-      run: pytest -v
-      
-    - uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: Ubuntu_20.04_Testlog
-        path: builddir/meson-logs/testlog.txt  
-
-
-  build-on-archlinux:
-    runs-on: ubuntu-latest
-    container: archlinux:latest #pull directly from dockerhub   
-
-    steps:
-    - name: install prequisits
-      run: pacman -Syu --noconfirm; pacman -Syy sudo git --noconfirm
-
-    - name: checkout main repository
-      uses: actions/checkout@v3
-      with:
-        submodules: recursive
-
-    - name: install dependecies (c++)
-      run: sudo pacman -Syy --noconfirm base-devel ccache pkg-config cmake python-pip boost curl
-
-    - name: install dependecies (meson & python)
-      run: pip install meson ninja pytest
-      
-    - name: configure meson
-      run: meson setup builddir/; meson configure builddir -Dpython.install_env=auto -Dprefix=/usr/;
-      env:
-        CC: gcc
-
-    - name: compile project
-      run: meson compile -C builddir/
-
-    - name: test (cpp)
-      run: meson test -C builddir/ -v
-
-    - name: install project
-      run: meson install -C builddir/
-
-    - name: test (pytest)
-      run: pytest -v
-      
-    - uses: actions/upload-artifact@v1
-      if: failure()
-      with:
-        name: archlinux_Testlog
         path: builddir/meson-logs/testlog.txt
     
 
